# Rokey_f1_co-op3

./: .gitignore  README.md
avoidance_roi_filter/: package.xml  setup.cfg  setup.py
avoidance_roi_filter/avoidance_roi_filter/: cmd_vel_publisher.py  obstacle_stopper.py  plot_cmd_vel.py  roi_filter.py
avoidance_roi_filter/launch/: avoidance_system.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot3_autorace_camera/share/turtlebot3_autorace_camera/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_autorace_camera/share/turtlebot3_autorace_camera/calibration/extrinsic_calibration/: compensation.yaml  projection.yaml
install/turtlebot3_autorace_camera/share/turtlebot3_autorace_camera/launch/: extrinsic_camera_calibration.launch.py  intrinsic_camera_calibration.launch.py
install/turtlebot3_rokey_camera/share/turtlebot3_rokey_camera/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_rokey_camera/share/turtlebot3_rokey_camera/config/: birds_eye_points.yaml
install/turtlebot3_rokey_camera/share/turtlebot3_rokey_camera/launch/: line_tracing.launch.py
log/: latest_build
manipulator_move/: CMakeLists.txt  package.xml
manipulator_move/src/: aruco_moveit_executor.cpp
point_cloud/: package.xml  setup.cfg  setup.py
point_cloud/point_cloud/pcd_publisher/: pcd_publisher_node.py
point_cloud/point_cloud/pcd_subscriber/: pcd_subscriber_node.py
rokey_bringup/: package.xml  setup.cfg  setup.py
rokey_bringup/rokey_bringup/: gripper_mover.py  obstacle_toggle_node.py  trajectory_client.py
turtlebot3_autorace_camera/calibration/extrinsic_calibration/: projection.yaml
turtlebot3_autorace_camera/turtlebot3_autorace_camera/: image_projection.py
turtlebot3_manipulation_bringup/: CMakeLists.txt  package.xml
turtlebot3_manipulation_bringup/launch/: gazebo.launch.py
turtlebot3_manipulation_bringup/src/: aruco_follower_node.cpp  aruco_pose_listener.cpp  aruco_pose_stabilizer.cpp  gripper_test_node.cpp  init_pose.cpp  init_pose_node.cpp  mission_pose.cpp  moveit_test_node.cpp  pick_and_return_node.cpp  pick_node.cpp  task_executor_node.cpp
turtlebot3_manipulation_bringup/worlds/: turtlebot3_course.world
turtlebot3_manipulation_bringup/worlds/aruco_visual_marker_0/: model.sdf
turtlebot3_manipulation_bringup/worlds/aruco_visual_marker_0/materials/scripts/: aruco_visual_marker_0_marker.material
turtlebot3_manipulation_bringup/worlds/obstacle_box/:  model.config  model.sdf
turtlebot3_manipulation_bringup/worlds/turtlebot3_course/course/: model.sdf
turtlebot3_manipulation_bringup/worlds/turtlebot3_course/traffic_light/: model.sdf
turtlebot3_manipulation_description/gazebo/: turtlebot3_waffle_pi.gazebo.xacro
turtlebot3_manipulation_description/urdf/: open_manipulator_x.urdf.xacro  turtlebot3_manipulation.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
turtlebot3_manipulation_moveit_config/: package.xml
turtlebot3_manipulation_moveit_config/launch/: moveit_gazebo.launch.py
turtlebot3_rokey_camera/: package.xml  setup.cfg  setup.py
turtlebot3_rokey_camera/config/: birds_eye_points.yaml  compensation.yaml  image_preprocessor_params.yaml  nav2_params.yaml  projection.yaml  sobel_params.yaml
turtlebot3_rokey_camera/launch/: extrinsic_camera_calibration.launch.py  intrinsic_camera_calibration.launch.py  line_tracing.launch.py  setup.launch.py
turtlebot3_rokey_camera/turtlebot3_rokey_camera/: aruco_detector.py  aruco_pose_publisher.py  aruco_real_pose_pub.py  auto_birdseye_from_yaml.py  birds_eye_view.py  camera_to_base.py  image_compensation.py  image_line.py  image_preprocessor.py  image_projection.py  lidar_roi.py  my_gui.py  path_pub.py  sliding_window_path_node.py  sliding_window_tracker.py  sobel_curve_direction.py
